# CyberScale

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-training.txt  requirements-web.txt  requirements.txt
cyberscale_web/: settings.py  urls.py  wsgi.py
data/reference/: authorities.json  be_thresholds.json  blueprint_matrix.json  curated_be_incidents.json  curated_incidents.json  curated_incidents_README.md  curated_incidents_schema.json  curated_lu_crisis_scenarios.json  curated_lu_incidents.json  (+12 more)
docs/: docker-playground.md  enhancement-roadmap.md  lessons-learned-misp-sync.md  lessons-learned.md  misp-integration-design.md  product-specification.md
entity/: admin.py  assessment.py  authority.py  forms.py  misp_export.py  misp_profile_export.py  misp_push.py  models.py  urls.py  views.py
evaluation/: add_real_incident.py  benchmark_authority_feedback.py  benchmark_be.py  benchmark_curated.py  benchmark_incidents.py  benchmark_lu.py  benchmark_lu_crisis.py  benchmark_multi_entity.py  benchmark_predecessor.py  curated_benchmark.md  curated_loader.py  degradation_tests.py  e2e_be_demo.py  e2e_v5_demo.py  e2e_v7_demo.py  e2e_v8_demo.py  e2e_v8_full_demo.py  incident_benchmark.md  lu_benchmark.md  multi_entity_benchmark.md  predecessor_benchmark.json  predecessor_benchmark.md  reconciliation_analysis.py  scorer_report.md  scorer_v2_report.md  validate_real_incidents.py
scripts/: cyberscale.sh  misp-b-init.sh  misp-init.sh  misp-sync-init.sh
templates/: base.html
(+145 files in other folders)
