[tool.poetry]
name = "cyberscale"
version = "1.0.0"
description = "Multi-phase cyber incident severity assessment MCP server"
authors = ["Eric Romang"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "cyberscale", from = "src"}]
repository = "https://github.com/eromang/CyberScale"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastmcp = ">=3.1.1,<4.0.0"
requests = ">=2.31.0,<3.0.0"
chromadb = ">=0.5.0,<1.0.0"
sentence-transformers = ">=3.0.0,<4.0.0"
torch = ">=2.2.0,<3.0.0"
transformers = ">=4.40.0,<5.0.0"

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
torch = ">=2.2.0,<3.0.0"
transformers = ">=4.40.0,<5.0.0"
scikit-learn = ">=1.4.0,<2.0.0"
pandas = ">=2.2.0,<3.0.0"
matplotlib = ">=3.8.0,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
responses = ">=0.25.0,<1.0.0"

[tool.poetry.scripts]
cyberscale = "cyberscale.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/tests", "entity/tests"]
DJANGO_SETTINGS_MODULE = "cyberscale_web.settings"
